# osu-rs

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/game/: config.rs  container.rs  mod.rs  stated_game_app.rs
src/map/: beatmap.rs  bezier.rs  coord.rs  hit_object.rs  mod.rs
