[package]

name = "osu_rs"
version = "0.0.1"
authors = [ "Cherrionella <gorokhov-dev@yandex.ru>" ]

[dependencies]
toml = "*"
time = "*"
rand = "*"
image = "*"
fps_counter = "*"
sdl2 = "*"
pistoncore-sdl2_window = "*"
gfx = "*"
gfx_device_gl = "*"
flate2 = "*"
piston = "0.2"
rustc-serialize = "*"

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`
rpath = false  # Controls whether the compiler passes `-C rpath`
lto = false    # Controls `-C lto` for binaries and staticlibs
debug-assertions = true  # Controls whether debug assertions are enabled
codegen-units = 1 # Controls whether the compiler passes `-C codegen-units`
                  # `codegen-units` is ignored when `lto = true`

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
