[package]

name = "osu_rs"
version = "0.0.1"
authors = [ "Cherrionella <gorokhov-dev@yandex.ru>" ]
edition = "2018"

[dependencies]
toml = "0.1.20"
time = "0.1.26"
rand = "0.3.8"
image = "0.5.0"
fps_counter = "0.2.0"
#sdl2 = "0.4.0"
pistoncore-sdl2_window = "0.25.0"
gfx = "0.8.0"
gfx_device_gl = "0.8.0"
flate2 = "0.2.7"
piston = "0.18.0"
rustc-serialize = "0.3.15"

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`
rpath = false  # Controls whether the compiler passes `-C rpath`
lto = false    # Controls `-C lto` for binaries and staticlibs
debug-assertions = true  # Controls whether debug assertions are enabled
codegen-units = 1 # Controls whether the compiler passes `-C codegen-units`
                  # `codegen-units` is ignored when `lto = true`

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
