[package]

name = "osu_rs"
version = "0.0.1"
authors = [ "Cherrionella <gorokhov-dev@yandex.ru>" ]
edition = "2018"

[dependencies]
toml = "0.1.20" #TODO:outdated
#time = "0.1.26"
rand = "0.8.0" #used in bezier interpolation #I bumped this from 0.3.23.
#image = "0.5.0"
fps_counter = "0.2.0"
#sdl2 = "0.4.0"
#gfx = "0.8.0"
#gfx_device_gl = "0.8.0"
#flate2 = "0.2.7"
rustc-serialize = "0.3.15" #serializing types #TODO:DEPRACTICED

#The following dependencies have interdependencies with each other. be careful when updating
piston = "0.18.0" #TODO:OUTDATED
pistoncore-sdl2_window = "0.25.0" #creates window and interfaces with opengl stuff? #TODO:OUTDATED


# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`
rpath = false  # Controls whether the compiler passes `-C rpath`
lto = false    # Controls `-C lto` for binaries and staticlibs
debug-assertions = true  # Controls whether debug assertions are enabled
codegen-units = 1 # Controls whether the compiler passes `-C codegen-units`
                  # `codegen-units` is ignored when `lto = true`

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
